--- a/electrical_calculations/circuits/static/circuits/styles.css
+++ b/electrical_calculations/circuits/static/circuits/styles.css
@@ -1,1 +1,45 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
+.content {
+    flex: 1;
+}
+
+
+.prev_calc_class:hover {
+    background-color: #f0f0f0;
+    color: #007bff;
+    cursor: pointer;
+}
+
+
+.profile-picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: relative;
+    bottom: -75px;
+    left: 20px;
+    border: 5px solid white;
+}
+
+
+.profile-header {
+    background-image: url('https://media.istockphoto.com/id/821760914/vector/pastel-multi-color-gradient-vector-background-simple-form-and-blend-with-copy-space.jpg?s=2048x2048&w=is&k=20&c=t5GvoPlf0t5weZvrd4xY9gTHv45-3BJSdiv2ZoSRLKU=');
+    background-size: cover;
+    background-position: center;
+    height: 200px;
+    position: relative;
+}
+
+.nav-item a:hover {
+    color:blue
+}
