--- a/electrical_calculations/circuits/templates/circuits/layout.html
+++ b/electrical_calculations/circuits/templates/circuits/layout.html
@@ -8,32 +8,85 @@
     <title>
         {% if title %} {{ title }} {% else %} Document {% endif %}
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'circuits/styles.css' %}">
-    <script src="{% static 'circuits/calculate.js' %}" defer></script>
     <script src="{% static 'circuits/home.js' %}" defer></script>
+    <script src="{% static 'circuits/calculate.js' %}" defer></script>
+    <script src="{% static 'circuits/layout.js' %}" defer></script>
+    <script src="{% static 'circuits/about.js' %}" defer></script>
+
 </head>
+
 <body>
-    <div class="container mt-2">
-        <nav>
-            <h1>Navbar</h1>
-        </nav>
-    </div>
-    <hr>
-    <div class="container mt-2">
-        {% if message %}
-            <small>{{ message }}</small>
-        {% endif %}
-    </div>
-    
 
-    <div class="container mt-2">
-        {% block body %} {% endblock %}
+    <div class="wrapper">
+        <!-- Navbar -->
+        <div class="container mt-4">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    {% if user.is_authenticated %}
+                        <a class="navbar-brand" href="{% url 'home' %}">{{ user.username.upper }}</a>
+                    {% else %}
+                        <a class="navbar-brand" href="{% url 'user_login' %}">Electrical Engineering</a>
+                    {% endif %}
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                {% if user.is_authenticated %}
+                                    <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                                {% else %}
+                                    <a class="nav-link" aria-current="page" href="{% url 'user_login' %}">Home</a>
+                                {% endif %}
+                            </li>
+                            <li class="nav-item">
+                                {% if user.is_authenticated %}
+                                    <a class="nav-link" href="{% url 'calculate' %}">Calculate</a>
+                                {% else %}
+                                    <a class="nav-link disabled" href="{% url 'calculate' %}">Calculate</a>
+                                {% endif %}
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'about' %}">About</a>
+                            </li>
+                        </ul>
+                        <span class="navbar-text">
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'logout_user' %}" class="btn btn-outline-primary">Logout</a>
+                            {% endif %}
+                        </span>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <hr>
+
+        <div class="container mt-2">
+            {% if message %}
+                <div class="alert alert-info">
+                    <small>{{ message }}</small>
+                </div>
+            {% endif %}
+        </div>
+
+        <div class="container content mt-2">
+            {% block body %} {% endblock %}
+        </div>
+
+        <!-- Footer -->
+        <footer class="py-2 bg-dark text-white">
+            <div class="container text-center">
+                <p>&copy; <span id="currentYear"></span> Cloyd. All rights reserved.</p>
+                <small id="clock"></small>
+            </div>
+        </footer>
+        
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
-    
 </html>
