--- a/electrical_calculations/circuits/static/circuits/styles.css
+++ b/electrical_calculations/circuits/static/circuits/styles.css
@@ -15,7 +15,7 @@ html, body {
 
 
 .prev_calc_class:hover {
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
     color: #007bff;
     cursor: pointer;
 }
@@ -42,4 +42,9 @@ html, body {
 
 .nav-item a:hover {
     color:blue
+}
+
+
+.hidden {
+    display: none;
 }
